jiracli-mcp: adding package-local.json.gitignore
Signed-off-by: Chris Van Hoof <vanhoof@ouwish.com>

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ bower_components
 # node_modules
 node_modules/
 
+# Lock files (for libraries/packages intended for distribution)
+package-lock.json
+yarn.lock
+
 # TypeScript v1 declaration files
 typings/
 
