--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,6 @@
 {
   "mcpServers": {
-    "jira-mcp": {
+    "jiracli-mcp": {
       "command": "node",
       "args": ["/absolute/path/to/jiracli-mcp/server.js"],
       "env": {
