--- a/config.example.json
+++ b/config.example.json
@@ -4,9 +4,10 @@
       "command": "node",
       "args": ["/absolute/path/to/jiracli-mcp/server.js"],
       "env": {
+        "JIRA_DEFAULT_PROJECT": "YOUR_PROJECT_KEY",
+        "JCLI_USE_GLOBAL": "false",
         "JCLI_VENV_PATH": "/absolute/path/to/jiracli/venv",
-        "JCLI_WORKING_DIR": "/absolute/path/to/jiracli",
-        "JIRA_DEFAULT_PROJECT": "YOUR_PROJECT_KEY"
+        "JCLI_WORKING_DIR": "/absolute/path/to/jiracli"
       }
     }
   }
