--- a/config.example.json
+++ b/config.example.json
@@ -5,6 +5,7 @@
       "args": ["/absolute/path/to/jiracli-mcp/server.js"],
       "env": {
         "JIRA_DEFAULT_PROJECT": "YOUR_PROJECT_KEY",
+        "JIRA_BOARDS": "Board One,Board Two,Development Board",
         "JCLI_USE_GLOBAL": "false",
         "JCLI_VENV_PATH": "/absolute/path/to/jiracli/venv",
         "JCLI_WORKING_DIR": "/absolute/path/to/jiracli"
